<resources>
    <string name="app_name">Visual Physics</string>
    <string name="title_input">Ввод данных</string>
    <string name="title_info_1">Немного об ускорении</string>
    <string name="title_info_2">Движение по окружности</string>
    <string name="title_info_3">Немного о силе</string>
    <string name="title_info_4">О свободном падении</string>
    <string name="title_info_5">Немного об импульсе</string>
    <string name="test">Задачи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="afterSaveData">Найденные данные</string>
    <string name="output_time">Прошедшее время</string>
    <string name="button_start_inform">Хочу узнать больше</string>
    <string name="tint_input">После ввода не забудьте нажать кнопку сохранить</string>
    <string name="titleL1">Ускорение</string>
    <string name="titleL2">По окружности</string>
    <string name="titleL3">II Закон Ньютона</string>
    <string name="titleL4">Под углом к горизонту</string>
    <string name="titleL5">Импульс тел</string>
    <string name="titleL6">Сила Трения</string>
    <string name="titleL7">Колебания</string>
    <string name="titleL8">Приломление света</string>
    <string name="buttonLogin">Зарегистрироваться</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_1"><font size="18">Лекции</font></string>
    <string name="menu_2"><font size="18">Задачи</font></string>
    <string name="menu_3"><font size="18">Настройки</font></string>
    <string name="menu_5"><font size="18">Мой прогресс</font></string>
    <string name="menu_6"><font size="18">Лабораторные</font></string>
    <string name="menu_4"><font color='red' size="18">Выйти</font></string>
    <string name="input_speed_title">Скорость</string>
    <string name="input_radius_title">Радиус</string>
    <string name="input_force_title">Сила</string>
    <string name="input_mass_title">Масса</string>
    <string name="input_angle_title">Угол падения</string>
    <string name="input_height_title">Высота падения</string>
    <string name="input_speed">Введите значение в [м/с]</string>
    <string name="input_acc">Введите значение в [м/с^2]</string>
    <string name="input_rad">Введите значение в [м]</string>
    <string name="input_force">Введите значение в [Н]</string>
    <string name="input_mass">Введите значение в [кг]</string>
    <string name="input_angle">Введите значение в [°]</string>
    <string name="input_height">Введите значение в [м]</string>
    <string name="answer">Ответ</string>
    <string name="answerHelper">Введите ответ и нажмите сохранить</string>
    <string name="lesson1_inform">
            Скорость при различных неравномерных движениях изменяется с течением времени по-разному.
            Движение, при котором скорость тела за любые равные промежутки времени увеличивается (или уменьшается) на одно и то же значение, называют равноускоренным.
            Ускорение, как и скорость, имеет направление. Иначе говоря, ускорение — векторная физическая величина.
            Зная ускорение, можно вычислить скорость равноускоренно движущегося тела в любой момент времени. a = ( U1 - U0 ) / t
    </string>
    <string name="l1task1">
        ЗАДАЧА №1. Турист прошел 4 км со скоростью 4,8 км/ч. Сколько минут он шел?
    </string>
    <string name="l1task2">
        ЗАДАЧА №2. За какое время в секундах автомобиль, двигаясь с ускорением 2 м/с^2 увеличивает свою скорость от 54 км/ч до 72 км/ч?
    </string>
    <string name="l2task1">
        ЗАДАЧА №1. Шарик двигается по окружности радиусом 3 м с постоянной по модулю скоростью так, что полный оборот он совершает за 10 с. Определите его скорость. Считайте что число П = 3.
    </string>
    <string name="l2task2">
        ЗАДАЧА №2. Тело движется по окружности радиусом 12 м с центростремительным ускорением 3 м/с^2. Определите модуль его скорости в м/с.
    </string>
    <string name="l3task1">
        ЗАДАЧА №1. Сила 10 Н действует на тело массой 500 г. Какая сила (в Н) сообщит такое же ускорение телу массой 3 кг?
    </string>
    <string name="l3task2">
        ЗАДАЧА №2. Сила 40 Н сообщает телу ускорение 0,6 м/с^2. Какая сила(в Н) сообщит этому же телу ускорение 1,8 м/с^2.
    </string>
    <string name="l4task1">
        ЗАДАЧА №1. Найдите высоту (в м) подъема камня, брошенного с начальной скоростью 10 м/с под углом 45 градусов к горизонту. Ускорение свободного падения считайте равным 10 м/с^2.
    </string>
    <string name="l4task2">
        ЗАДАЧА №2. Мяч был брошен под углом 30 градусов к горизонту с начальной скоростью 20 м/с. Какова дальность полета в метрах?
    </string>
    <string name="l5task1">
        ЗАДАЧА №2. С какой скоростью(в м/с) должна лететь шайба массой 160 г, чтобы ее импульс был равен импульсу пули массой 8 г, летящей со скоростью 600 м/с.
    </string>
    <string name="l5task2">
        ЗАДАЧА №2. В проплывающую под мостиком лодку массой 150 кг опускают с мостика груз массой 50 кг. Какова будет после этого скорость лодки( в м/с), если ее начальная скорость равна 4 м/с.
    </string>
    <string name="lesson2_inform">Скорость точки направлена по касательной к окружности в каждый момент времени. Ее называют линейной скоростью.
        При таком движении скорость точки меняется по направлению, а по модулю остается неизменной. Равномерное движение точки по окружности является движением с ускорением
        Ускорение всегда направлено к центру окружности и называется центростремительным, или нормальным. Часто его будут обозначать
        Модуль центростремительного ускорения определяется формулой a = U^2 / R
    </string>
    <string name="lesson3_inform">
        Второй закон Ньютона – это фундаментальный закон природы; он является обобщением опытных фактов, которые можно разделить на две категории:
        Если на тела разной массы подействовать одинаковой силой, то ускорения, приобретаемые телами, оказываются обратно пропорциональны массам: при F = const.
        Если силами разной величины подействовать на одно и то же тело, то ускорения тела оказываются прямо пропорциональными приложенн силам:при m = const.
        Обобщая подобные наблюдения, Ньютон сформулировал основной закон динамики:
        Сила, действующая на тело, равна произведению массы тела на сообщаемое этой силой ускорение:
        Это и есть второй закон Ньютона. Он позволяет вычислить ускорение тела, если известна его масса m и действующая на тело сила : F = m*a ; a = F / m </string>
    <string name="lesson4_inform">
        Движение тела, брошенного горизонтально или под углом к горизонту.
        Это движение в плоскости, поэтому для описания движения необходимо 2 координаты.
        Считаем, что движение происходит вблизи поверхности Земли, поэтому ускорение тела – ускорение свободного падения (a = g).
        Так как мы пренебрегаем сопротивлением воздуха,
        то ускорение направлено только к поверхности Земли (g) – вдоль вертикальной оси (y), вдоль оси х движение равномерное и прямолинейное.
    </string>
    <string name="lesson5_inform">
        Из уравнения ∆p = F∆t
        вытекает закон сохранения импульса.
        Если на систему не действуют никакие внешние силы, то правая часть уравнения обращается в ноль,
        что означает неизменность суммарного импульса системы:∆p = m1υ1 + m2υ2 = const
        Система, на которую не действуют никакие внешние силы или равнодействующая внешних сил равна нулю, называется замкнутой.
        Закон сохранения импульса гласит:
        Суммарный импульс замкнутой системы тел остается постоянным при любых взаимодействиях тел системы между собой.
        Полученный результат справедлив для системы, содержащей произвольное число тел. Если сумма внешних сил не равна нулю,
        но сумма их проекций на какое-то направление равна нулю, то проекция импульса системы на это направление не меняется.
        Так, например, система тел на поверхности Земли не может считаться замкнутой из-за силы тяжести, действующей на все тела,
        однако сумма проекций импульсов на горизонтальное направление может оставаться неизменной (при отсутствии трения), т. к. в этом направлении сила тяжести не действует.
    </string>
    <string name="elastic">\Упругое\</string>
    <string name="noElastic"> Неупругое  </string>
    <string name="selectFlag">\Тип соударения\</string>
    <string name="saveSettings">\Сохранить настройки\</string>
    <string name="repeat_education">\Нажмите для прохождения обучения\</string>
    <string name="aboutUs">Visual Physics - это образовательная платформа, в которой пользователь может улучшить свое понимание физики при помощи визуализации или просмотра специально отобранных лекций, а также попрактиковаться в решении задач базового уровня сложности для отработки полученных навыков."</string>
    <string name="aboutCreated">Информация о создателях</string>
    <string name="toEnd"> Поздравляем !</string>
    <string name="toEndDescription">Вы прошли основное обучение и готовы изучать физику вместе с нами! Чтобы получить больше возможностей, на главной странице нажмите на кнопку ≡.  </string>
    <string name="outputSpeed">Вы ввели значение скорости тела - </string>
    <string name="outputSpeed1">Вы ввели значение скорости первого тела - </string>
    <string name="outputSpeed2">Вы ввели значение скорости второго тела - </string>
    <string name="outputMass1">Вы ввели значение массы первого тела - </string>
    <string name="outputMass2">Вы ввели значение массы второго тела - </string>
    <string name="outputImp1">Значение импульса первого тела - </string>
    <string name="outputImp2">Значение импульса второго тела - </string>
    <string name="settings_0"><font color='#38A6FF' size='20'>Основные настройки</font></string>
    <string name="settings_1"><font color='black'>Звуки в уроках</font></string>
    <string name="settings_2"><font color='black'>Список заимствований</font></string>
    <string name="settings_3"><font color='black'>О приложении</font></string>
    <string name="settings_4"><font color='red'>Выйти из профиля</font></string>
    <string name="about_us"><font color='black'>Информация о нас</font></string>
    <string name="authors"><font color='black'>Использованный контент</font></string>
    <string name="exit_profile_subtitle"><font color='red'>Полное удаление данных</font></string>
    <string name="video1">1OkRaUmRMsQ</string>
    <string name="video2">CGDrHzP-qnA</string>
    <string name="video3">ygDsGszS6w8</string>
    <string name="video4">Qrpl6HNdE4Q</string>
    <string name="video5">cHWJr0PufIg</string>
</resources>