<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.item.LecturesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Лекции">
            <ImageView
                android:padding="10dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="top|end"
                android:src="@drawable/lectures"
                app:tint="@color/white" />

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:background="@color/primary"
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/containerYouTube1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:autoPlay="false"
            app:videoId="@string/video1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintVertical_bias="0" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/containerYouTube2"
                app:autoPlay="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:videoId="@string/video2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintVertical_bias="0" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/containerYouTube3"
                app:autoPlay="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:videoId="@string/video3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintVertical_bias="0" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/containerYouTube4"
                app:autoPlay="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:videoId="@string/video4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintVertical_bias="0" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/containerYouTube5"
                app:autoPlay="false"
                app:videoId="@string/video5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintVertical_bias="0" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>